fix: general entries debit and credit alignement and rendering fixed

--- a/src/Features/GeneralJournal/Components/GeneralEntries/generalentries.css
+++ b/src/Features/GeneralJournal/Components/GeneralEntries/generalentries.css
@@ -35,3 +35,9 @@
   display: flex;
   flex-flow: column;
 }
+.remove-padding{
+  padding-top: inherit !important;
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+  padding-bottom: inherit !important;
+}
